<resources>
    <string name="app_name">CalendarApp</string>
    <string name="button_save_event">Save Event</string>
    <string name="event_repeat">Repeat</string>
    <string name="event_end">End  </string>
    <string name="event_start">Start</string>
    <string name="event_memo">Event Memo</string>
    <string name="event_name">Event Name</string>
    <string name="new_event">New Event</string>
    <string name="prev"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string name="add">+</string>
    <string name="MMyyyy">Jun 2023</string>
    <string name="mmDDyyyy">June 22, 2023</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THUR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="button_delete_event">Delete</string>
    <string name="button_update_event">Save</string>
    <string name="new_event_text">New Event</string>
    <string name="all_day_event">All Day</string>
    <string name="event_details">Event Details</string>
    <string name="repeat">Repeat    </string>
    <string name="end_repeat">End Repeat</string>
    <string name="owner">User</string>
    <string name="select_owner">Select User</string>
    <string name="change_owner">Change User</string>
    <string name="memo_details">Memo Details</string>
    <string name="send_memo_to">Send Memo To:</string>
    <string name="memo_name">Memo Name</string>
    <string name="memo">Memo</string>
    <string name="save_memo">Save Memo</string>
    <string name="select">Select</string>
    <string name="select_file">Select File</string>
    <string name="no_file_selected">No File Selected</string>
    <string name="new_memo">New Memo</string>
    <string name="from">FROM:   </string>
    <string name="to">TO:   </string>
    <string name="unread">Unread</string>
    <string name="read">Read</string>
    <string name="chatgpt">ChatGPT</string>
    <string name="send">send</string>
    <string name="message_template">%1$s / %2$s</string>
</resources>