<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:layout_marginTop="20dp"
        android:background="@color/primary">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="previousMonthAction"
            android:text="@string/prev"
            android:backgroundTint="@color/primary"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/MMyyyy"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:onClick="nextMonthAction"
            android:backgroundTint="@color/primary"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16sp"/>


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:onClick="newEventAction"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/primary"
            tools:ignore="RtlCompat" />
    </FrameLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:layout_marginTop="120dp" />

</FrameLayout>










