<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".EventDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldEventName"
            android:layout_marginBottom="5dp"
            android:hint="@string/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldEventMemo"
            android:layout_marginBottom="5dp"
            android:hint="@string/event_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldEventStart"
            android:hint="@string/event_start"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldEventEnd"
            android:layout_marginBottom="5dp"
            android:hint="@string/event_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldEventRepeat"
            android:layout_marginBottom="5dp"
            android:hint="@string/event_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/form_buttonDelete"
            android:text="@string/button_delete_event"
            android:backgroundTint="@color/delete"
            android:minHeight="60dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/form_buttonUpdate"
            android:text="@string/button_update_event"
            android:backgroundTint="@color/primary"
            android:minHeight="60dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>