<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".MemoDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:layout_marginTop="20dp"
        android:background="@color/primary">

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:onClick="backToMemoMain"
            android:text="@string/prev"
            android:backgroundTint="@color/primary"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/eventDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Memo Details"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_weight="2"/>

        <Space
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldReceiver"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="Receiver" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldMemoName"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:hint="Memo Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldMemo"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:hint="Memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/form_buttonDelete"
            android:text="@string/button_delete_event"
            android:backgroundTint="@color/delete"
            android:minHeight="60dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/form_buttonUpdate"
            android:text="@string/button_update_event"
            android:backgroundTint="@color/primary"
            android:minHeight="60dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>